# fastjet

./: .cirrus.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  0001-fjcontrib-top-level-only-cmake-scripts.patch  0001-use-CMAKE_INSTALL_LIBDIR-consistently-in-pyinterface.patch  CMakeLists.txt  CMakelists.txt  LICENSE  MANIFEST.in  README.md  patch.sed  patch.txt  patch2.txt  patch_fastjet_i.txt  patch_makefilein.txt  patch_makefileinc.txt  pyproject.toml  setup.cfg  setup.py  test.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  pr.yml  wheels.yml
docs/: Awkward.rst  AwkwardClusterSequence.rst  clustersequence.rst  clustersequencearea.rst  conf.py  gas.rst  index.rst  jetdefinition.rst  particle.rst  pseudojet.rst  requirements.txt
src/: _ext.cpp
src/fastjet/: __init__.py  _complexevent.py  _generalevent.py  _multievent.py  _pyjet.py  _singleevent.py  _utils.py  pyjet.py  version.py
tests/: test_0001-merge-in-aryan26roy-fastjet.py  test_001-basic_clustering.py  test_002-exclusive_jets.py  test_003-vector.py  test_004-exclusive_single-out.py  test_005_sorting.py  test_006-jet_input.py  test_006-misc.py  test_007-general.py  test_008-dask.py
tests/samples/: pfnano_skim.root
