[build-system]
requires = [
  "pybind11>=2.6.1",
  "scikit-build-core>=0.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "fastjet"
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "awkward>=2",
  "numpy>=1.13.3",
  "vector"
]

[project.optional-dependencies]
dask = [
    "dask>=2023.4.0",
    "dask-awkward>=2023.4.2",
]
dev = [
    "pytest>=4.6",
]
docs = [
    "Sphinx>=3.0.0",
    "recommonmark>=0.5.0",
    "sphinx-copybutton",
    "sphinx-rtd-theme>=0.5.0",
]
test = [
    "pytest>=4.6",
    "uproot>=5",
    "dask>=2023.4.0;python_version>'3.7'",
    "dask-awkward[test]>=2023.4.2;python_version>'3.7'",
    "distributed>=2023.4.0;python_version>'3.7'",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
  "-vv",
  "-rs",
  "-Wd",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
ignore = [
  "E203",
  "E231",
  "E501",
  "E722",
  "W503",
  "B950",
]
select = ["C","E","F","W","T","B","B9","I"]
per-file-ignores = "tests/*: T"

[tools.mypy]
files = "src"
python_version = 3.9
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tools.mypy.numpy]
ignore_missing_imports = true

[tool.cibuildwheel]
skip = "pp*"
test-extras = "test"
test-command = "pytest {project}/tests"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

[tool.cibuildwheel.linux]
before-all = [
    "yum update -y",
    "yum install -y mpfr-devel",
    "curl -L https://archives.boost.io/release/1.87.0/source/boost_1_87_0.tar.bz2 -o boost_1_87_0.tar.bz2",
    "tar --bzip2 -xf boost_1_87_0.tar.bz2",
    "mv boost_1_87_0/boost /usr/include/boost",
]
# Skip musllinux builds for the moment
skip = "*-musllinux_*"

[tool.scikit-build]
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.version = "CMakeLists.txt"
sdist.include = ["src/fastjet/version.py"]
wheel.install-dir = "fastjet"

[tool.scikit-build.cmake.define]
FASTJET_ENABLE_PYTHON = "ON"
FASTJET_ENABLE_CGAL = "ON"
FASTJET_PYTHON_PACKAGE_NAME = "_swig"
FASTJET_CUSTOM_PYTHON_INSTALL = "./"

[tool.setuptools_scm]
write_to = "src/fastjet/version.py"
