[metadata]
name = fastjet
description = Official FastJet bindings to Python and Awkward Array.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/fastjet
author = Aryan Roy
author_email = aryanroy5678@gmail.com
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_files = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://fastjet.readthedocs.io/
    Bug Tracker = https://github.com/scikit-hep/fastjet/issues
    Discussions = https://github.com/scikit-hep/fastjet/discussions
    Changelog = https://github.com/scikit-hep/fastjet/releases

[options]
packages = find:
install_requires =
    awkward>=2
    numpy>=1.13.3
    vector
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dask =
    dask>=2023.4.0
    dask-awkward>=2023.4.2
dev =
    pytest>=4.6
docs =
    Sphinx>=3.0.0
    recommonmark>=0.5.0
    sphinx-copybutton
    sphinx-rtd-theme>=0.5.0
test =
    pytest>=4.6
    uproot>=5
    dask>=2023.4.0;python_version>"3.7"
    dask-awkward>=2023.4.2;python_version>"3.7"
    distributed>=2023.4.0;python_version>"3.7"

[tool:pytest]
addopts = -vv -rs -Wd
testpaths =
    tests

[check-manifest]
ignore =
    .github/**
    docs/**
    .pre-commit-config.yaml
    .readthedocs.yml
    .clang-format
    src/*/version.py

[tool:isort]
profile = black
multi_line_output = 3

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T

[mypy]
files = src
python_version = 3.6
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-numpy]
ignore_missing_imports = True
